flex/nc_lex/grammar.output
Nonterminals useless in grammar

    bool_expr


Terminals unused in grammar

    SEMICOLON
    OTHER
    EQ
    NEQ
    LTEQ
    GTEQ
    IF
    GOTO
    '<'
    '>'


Rules useless in grammar

   38 bool_expr: arith_expr '<' arith_expr
   39          | arith_expr '>' arith_expr
   40          | arith_expr EQ arith_expr
   41          | arith_expr NEQ arith_expr
   42          | arith_expr LTEQ arith_expr
   43          | arith_expr GTEQ arith_expr


Grammar

    0 $accept: prog $end

    1 prog: lines

    2 lines: ε
    3      | line NEWLINE lines

    4 line: exprs

    5 exprs: ε
    6      | expr
    7      | expr SPACE exprs

    8 expr: CMD arith_expr
    9     | assignment
   10     | LABEL
   11     | SPECIAL_CMD
   12     | CUSTOM_VAR SPACE arith_expr
   13     | CALL SPACE STRING
   14     | MISC_ID
   15     | fn
   16     | COMMENT
   17     | error

   18 assignment: VAR SET arith_expr
   19           | CMD SET arith_expr
   20           | CUSTOM_VAR SET arith_expr

   21 val: VAR
   22    | INT
   23    | FLOAT

   24 fn: MISC_ID '(' params ')'

   25 params: ε
   26       | arith_expr
   27       | MISC_ID
   28       | arith_expr ',' params
   29       | MISC_ID ',' params

   30 arith_expr: val
   31           | fn
   32           | arith_expr '+' arith_expr
   33           | arith_expr '-' arith_expr
   34           | arith_expr '*' arith_expr
   35           | arith_expr '/' arith_expr
   36           | '(' arith_expr ')'
   37           | '-' arith_expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 24 36
    ')' (41) 24 36
    '*' (42) 34
    '+' (43) 32
    ',' (44) 28 29
    '-' (45) 33 37
    '/' (47) 35
    '<' (60)
    '>' (62)
    error (256) 17
    SPACE (258) 7 12 13
    NEWLINE (259) 3
    SET (260) 18 19 20
    SEMICOLON (261)
    COMMENT (262) 16
    OTHER (263)
    STRING <char*> (264) 13
    INT <int> (265) 22
    FLOAT <float> (266) 23
    EQ (267)
    NEQ (268)
    LTEQ (269)
    GTEQ (270)
    IF (271)
    GOTO (272)
    VAR <char*> (273) 18 21
    CMD <char*> (274) 8 19
    SPECIAL_CMD <char*> (275) 11
    CUSTOM_VAR <char*> (276) 12 20
    CALL (277) 13
    MISC_ID (278) 14 24 27 29
    LABEL <char*> (279) 10


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    prog (35)
        on left: 1
        on right: 0
    lines (36)
        on left: 2 3
        on right: 1 3
    line (37)
        on left: 4
        on right: 3
    exprs (38)
        on left: 5 6 7
        on right: 4 7
    expr (39)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 6 7
    assignment (40)
        on left: 18 19 20
        on right: 9
    val <float> (41)
        on left: 21 22 23
        on right: 30
    fn <float> (42)
        on left: 24
        on right: 15 31
    params (43)
        on left: 25 26 27 28 29
        on right: 24 28 29
    arith_expr <float> (44)
        on left: 30 31 32 33 34 35 36 37
        on right: 8 12 18 19 20 26 28 32 33 34 35 36 37


State 0

    0 $accept: • prog $end

    error        shift, and go to state 1
    COMMENT      shift, and go to state 2
    VAR          shift, and go to state 3
    CMD          shift, and go to state 4
    SPECIAL_CMD  shift, and go to state 5
    CUSTOM_VAR   shift, and go to state 6
    CALL         shift, and go to state 7
    MISC_ID      shift, and go to state 8
    LABEL        shift, and go to state 9

    $end     reduce using rule 2 (lines)
    NEWLINE  reduce using rule 5 (exprs)

    prog        go to state 10
    lines       go to state 11
    line        go to state 12
    exprs       go to state 13
    expr        go to state 14
    assignment  go to state 15
    fn          go to state 16


State 1

   17 expr: error •

    $default  reduce using rule 17 (expr)


State 2

   16 expr: COMMENT •

    $default  reduce using rule 16 (expr)


State 3

   18 assignment: VAR • SET arith_expr

    SET  shift, and go to state 17


State 4

    8 expr: CMD • arith_expr
   19 assignment: CMD • SET arith_expr

    SET      shift, and go to state 18
    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 27


State 5

   11 expr: SPECIAL_CMD •

    $default  reduce using rule 11 (expr)


State 6

   12 expr: CUSTOM_VAR • SPACE arith_expr
   20 assignment: CUSTOM_VAR • SET arith_expr

    SPACE  shift, and go to state 28
    SET    shift, and go to state 29


State 7

   13 expr: CALL • SPACE STRING

    SPACE  shift, and go to state 30


State 8

   14 expr: MISC_ID •
   24 fn: MISC_ID • '(' params ')'

    '('  shift, and go to state 31

    $default  reduce using rule 14 (expr)


State 9

   10 expr: LABEL •

    $default  reduce using rule 10 (expr)


State 10

    0 $accept: prog • $end

    $end  shift, and go to state 32


State 11

    1 prog: lines •

    $default  reduce using rule 1 (prog)


State 12

    3 lines: line • NEWLINE lines

    NEWLINE  shift, and go to state 33


State 13

    4 line: exprs •

    $default  reduce using rule 4 (line)


State 14

    6 exprs: expr •
    7      | expr • SPACE exprs

    SPACE  shift, and go to state 34

    $default  reduce using rule 6 (exprs)


State 15

    9 expr: assignment •

    $default  reduce using rule 9 (expr)


State 16

   15 expr: fn •

    $default  reduce using rule 15 (expr)


State 17

   18 assignment: VAR SET • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 35


State 18

   19 assignment: CMD SET • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 36


State 19

   22 val: INT •

    $default  reduce using rule 22 (val)


State 20

   23 val: FLOAT •

    $default  reduce using rule 23 (val)


State 21

   21 val: VAR •

    $default  reduce using rule 21 (val)


State 22

   24 fn: MISC_ID • '(' params ')'

    '('  shift, and go to state 31


State 23

   37 arith_expr: '-' • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 37


State 24

   36 arith_expr: '(' • arith_expr ')'

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 38


State 25

   30 arith_expr: val •

    $default  reduce using rule 30 (arith_expr)


State 26

   31 arith_expr: fn •

    $default  reduce using rule 31 (arith_expr)


State 27

    8 expr: CMD arith_expr •
   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 8 (expr)


State 28

   12 expr: CUSTOM_VAR SPACE • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 43


State 29

   20 assignment: CUSTOM_VAR SET • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 44


State 30

   13 expr: CALL SPACE • STRING

    STRING  shift, and go to state 45


State 31

   24 fn: MISC_ID '(' • params ')'

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 46
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    $default  reduce using rule 25 (params)

    val         go to state 25
    fn          go to state 26
    params      go to state 47
    arith_expr  go to state 48


State 32

    0 $accept: prog $end •

    $default  accept


State 33

    3 lines: line NEWLINE • lines

    error        shift, and go to state 1
    COMMENT      shift, and go to state 2
    VAR          shift, and go to state 3
    CMD          shift, and go to state 4
    SPECIAL_CMD  shift, and go to state 5
    CUSTOM_VAR   shift, and go to state 6
    CALL         shift, and go to state 7
    MISC_ID      shift, and go to state 8
    LABEL        shift, and go to state 9

    $end     reduce using rule 2 (lines)
    NEWLINE  reduce using rule 5 (exprs)

    lines       go to state 49
    line        go to state 12
    exprs       go to state 13
    expr        go to state 14
    assignment  go to state 15
    fn          go to state 16


State 34

    7 exprs: expr SPACE • exprs

    error        shift, and go to state 1
    COMMENT      shift, and go to state 2
    VAR          shift, and go to state 3
    CMD          shift, and go to state 4
    SPECIAL_CMD  shift, and go to state 5
    CUSTOM_VAR   shift, and go to state 6
    CALL         shift, and go to state 7
    MISC_ID      shift, and go to state 8
    LABEL        shift, and go to state 9

    NEWLINE  reduce using rule 5 (exprs)

    exprs       go to state 50
    expr        go to state 14
    assignment  go to state 15
    fn          go to state 16


State 35

   18 assignment: VAR SET arith_expr •
   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 18 (assignment)


State 36

   19 assignment: CMD SET arith_expr •
   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 19 (assignment)


State 37

   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr
   37           | '-' arith_expr •

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 37 (arith_expr)


State 38

   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr
   36           | '(' arith_expr • ')'

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    ')'  shift, and go to state 51


State 39

   32 arith_expr: arith_expr '+' • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 52


State 40

   33 arith_expr: arith_expr '-' • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 53


State 41

   34 arith_expr: arith_expr '*' • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 54


State 42

   35 arith_expr: arith_expr '/' • arith_expr

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 22
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    val         go to state 25
    fn          go to state 26
    arith_expr  go to state 55


State 43

   12 expr: CUSTOM_VAR SPACE arith_expr •
   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 12 (expr)


State 44

   20 assignment: CUSTOM_VAR SET arith_expr •
   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 20 (assignment)


State 45

   13 expr: CALL SPACE STRING •

    $default  reduce using rule 13 (expr)


State 46

   24 fn: MISC_ID • '(' params ')'
   27 params: MISC_ID •
   29       | MISC_ID • ',' params

    '('  shift, and go to state 31
    ','  shift, and go to state 56

    $default  reduce using rule 27 (params)


State 47

   24 fn: MISC_ID '(' params • ')'

    ')'  shift, and go to state 57


State 48

   26 params: arith_expr •
   28       | arith_expr • ',' params
   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    ','  shift, and go to state 58

    $default  reduce using rule 26 (params)


State 49

    3 lines: line NEWLINE lines •

    $default  reduce using rule 3 (lines)


State 50

    7 exprs: expr SPACE exprs •

    $default  reduce using rule 7 (exprs)


State 51

   36 arith_expr: '(' arith_expr ')' •

    $default  reduce using rule 36 (arith_expr)


State 52

   32 arith_expr: arith_expr • '+' arith_expr
   32           | arith_expr '+' arith_expr •
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 32 (arith_expr)


State 53

   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   33           | arith_expr '-' arith_expr •
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 33 (arith_expr)


State 54

   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   34           | arith_expr '*' arith_expr •
   35           | arith_expr • '/' arith_expr

    $default  reduce using rule 34 (arith_expr)


State 55

   32 arith_expr: arith_expr • '+' arith_expr
   33           | arith_expr • '-' arith_expr
   34           | arith_expr • '*' arith_expr
   35           | arith_expr • '/' arith_expr
   35           | arith_expr '/' arith_expr •

    $default  reduce using rule 35 (arith_expr)


State 56

   29 params: MISC_ID ',' • params

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 46
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    $default  reduce using rule 25 (params)

    val         go to state 25
    fn          go to state 26
    params      go to state 59
    arith_expr  go to state 48


State 57

   24 fn: MISC_ID '(' params ')' •

    $default  reduce using rule 24 (fn)


State 58

   28 params: arith_expr ',' • params

    INT      shift, and go to state 19
    FLOAT    shift, and go to state 20
    VAR      shift, and go to state 21
    MISC_ID  shift, and go to state 46
    '-'      shift, and go to state 23
    '('      shift, and go to state 24

    $default  reduce using rule 25 (params)

    val         go to state 25
    fn          go to state 26
    params      go to state 60
    arith_expr  go to state 48


State 59

   29 params: MISC_ID ',' params •

    $default  reduce using rule 29 (params)


State 60

   28 params: arith_expr ',' params •

    $default  reduce using rule 28 (params)
